--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -34,14 +34,6 @@
 			</div>
 		</section>
 
-
-
-		<div class="card-paiement mt-5 d-flex justify-content-center">
-			<strong class="text-dark text-center pt-5 pb-5"><small class="alert-success">Aucune</small> carte de crédit n'est requise</strong>
-		</div>
-
-		
-
 		<div class="container">
 			<p class="lead mb-4 text-muted text-center text-justify">On conçoit la solution optimale de développement web pour chaque
 							situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis
@@ -230,7 +222,7 @@
 		<section>
 			<div class="container-fluid">
 				<div class="row align-items-center bg-black justify-content-center px-5 text-white 100-vh">
-					<div class="col-md-4">
+					<div class="col-md-4 mt-3">
 						<h1>BESOIN D'ÉCLAIRAGE ?</h1>
 						<p class="text-white text-justify">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
 						<a href="{{ url('front_project') }}" class="btn btn-warning px-5 mt-5">Nos réalisations</a>
