wip: fixing devis set password

--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -22,7 +22,7 @@
 				<img src="{{ asset('img/moi2.jpg')}}" class="card-img-top rounded-circle" alt="PDG - Walid BELBECHE" width="200" height="200">
 				<div class="card-body">
 					<h5 class="card-title">Walid BELBECHE</h5>
-					<h6 class="card-subtitle mb-2 text-body-secondary">PDG - Développeur</h6>
+					<h6 class="card-subtitle mb-2 text-body-secondary">Dirigeant - Développeur</h6>
 					<p class="card-text">Indépandant en développement web et gestion d'entreprise.</p>
 					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_walid">
 						En savoir plus
@@ -68,7 +68,7 @@
 					<img src="{{ asset('img/youss_ousmane.jpg')}}" class="card-img-top rounded-circle" alt="Commercial - Youssouf Ousmane" width="200" height="200">
 					<div class="card-body">
 						<h5 class="card-title">Youssouf Ousmane</h5>
-						<h6 class="card-subtitle mb-2 text-body-secondary">Responsable commercial</h6>
+						<h6 class="card-subtitle mb-2 text-body-secondary">Gestionnaire des ressources humaines <small>Stagiaire</small></h6>
 						<p class="card-text">Expert en commercialisation de produits et services informatiques et télécom.</p>
 						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_youssouf">
 							En savoir plus
