--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -289,3 +289,9 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
+/* Définition des spécialités de l'entreprise */
+
+#specs > div{
+    /* TODO: REDIMENSIONNER LES IMAGES A LA MEME HAUTEUR */
+}
