--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -245,53 +245,53 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-3">
+			<div class="row" id="specs">
+				<div class="col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-1.png" alt="PHP">
-						<h4>PHP 5/6/7/8.2</h4>
+						<h4>PHP</h4>
 					</div>
 				</div>
 
-				<div class=" col-xs-12 col-sm-3">
+				<div class="col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-2.png" alt="HTML 5 / CSS 3">
 						<h4>HTML 5 / CSS 3</h4>
 					</div>
 				</div>
 
-				<div class=" col-xs-12 col-sm-3 ">
+				<div class=" col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-3.png" alt="Git">
 						<h4>Git + SSH</h4>
 					</div>
 				</div>
 
-				<div class=" col-xs-12 col-sm-3 ">
+				<div class=" col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-4.png" alt="Symfony">
-						<h4>Symfony 4/5/6</h4>
+						<h4>Symfony</h4>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-3">
+				<div class="col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-5.svg" alt="React">
 						<h4>React / VueJs</h4>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-3">
+				<div class="col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-7.png" alt="Sass">
 						<h4>SaaS</h4>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-3">
+				<div class="col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-8.svg" alt="Json web token(JWT)" class="text-center">
 						<h4>Json web token</h4>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-3">
+				<div class="col-xs-12 col-sm-3 vh-30">
 					<div class="lm-info-block gray-default">
 						<img src="./img/clients/spec-9.png" alt="Axios / Ajax" class="text-center">
 						<h4>Axios/Ajax</h4>
