--- a/templates/front/maintenance/index.html.twig
+++ b/templates/front/maintenance/index.html.twig
@@ -13,12 +13,22 @@
 					<div class="page-content">
                         <h6 class="display-6" style="margin-top: 20%;">Notre équipe travaille dur actuellement</h6>
                         <span>Des correctifs sont en cours de développement, merci de votre compréhension.</span><br>
-                        <span>Bientôt les services seront rétablis, restez connecté(e)s.</span><br>
-						<hr>
-                        <a href="mailto: contact@scriptzenit.fr" class="pt-5 pb-5">Contactez-nous</a>
+						<span>Bientôt les services seront rétablis, restez connecté(e)s.</span><br>
+						<br>
+						<h6 class="display-6">Dernières actualités</h6>
+						<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7186542183821234176" height="1612" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+						<h6 class="display-6">Que voulez-vous faire ?</h6>
+						<div>
+							<div class="buttons_maintenance mt-5">
+								<a href="mailto: contact@scriptzenit.fr" class="pt-5 pb-5">Nous écrire ?</a>
+								<a href="{{ url('front_about') }}" class="pt-5 pb-5">Voir notre équipe ?</a>
+								<a href="{{ url('front_project') }}" class="pt-5 pb-5">Voir nos réalisations ?</a>
+							</div>
+							<hr>
+							À bientôt !<br>
+							L'équipe ScriptZenIT(BELBECHE)
+						</div>
                     </div>
-
-
 				</div>
 			</div>
 		</div>
