wip: fixing détails and errors

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -363,15 +363,101 @@
 				<!-- /Pricing -->
 			</div>
 
-			<div class="text-white bg-tertiary text-center pt-5 pb-5" id="agence">
-				<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
-				<p class="fw-bold mb-3 text-center lead text-white px-5 text-justify">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
-				<div class="ask">
-					<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
-						<span class="ml-2">
-							<span class="fas fa-arrow-right"></span>
-						</span>
-					</a>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12">
+					<div class="p-20"></div>
+
+					<!-- Testimonials -->
+					<div class="block-title">
+						<h2>Ils en parlent mieux que nous</h2>
+					</div>
+
+					<div id="testimonials_1" class="testimonials owl-carousel" data-mobile-items="1" data-tablet-items="2" data-items="2">
+						<!-- Testimonial 1 -->
+						<div class="testimonial-item">
+							<!-- Testimonial Content -->
+							<div class="testimonial-content">
+								<!-- Picture -->
+								<div class="testimonial-picture">
+									<img src="{{ asset('img/support/support2.svg') }}" alt="Alain Tixier"/>
+								</div>
+								<!-- /Picture -->
+
+								<!-- Testimonial Text -->
+								<div class="testimonial-text">
+									<p>La Nièvre c’est loin, mais heureusement il y a internet pour bosser !</p>
+								</div>
+								<!-- /Testimonial Text -->
+
+								<!-- Testimonial author information -->
+								<div class="testimonial-author-info">
+									<h5 class="testimonial-author">Alain Tixier</h5>
+									<p class="testimonial-firm">CEO SPIN OFF</p>
+								</div>
+								<!-- /Testimonial author information -->
+
+								<div class="testimonial-icon">
+									<i class="fa fa-quote-left"></i>
+								</div>
+
+								<div class="testimonial-icon-big">
+									<i class="fa fa-quote-right"></i>
+								</div>
+							</div>
+							<!-- /Testimonial Content -->
+						</div>
+						<!-- End of Testimonial 1 -->
+
+						<!-- Testimonial 2 -->
+						<div class="testimonial-item">
+							<!-- Testimonial Content -->
+							<div class="testimonial-content">
+								<!-- Picture -->
+								<div class="testimonial-picture">
+									<img src="{{ asset('img/support/support2.svg') }}" alt="Pascal Stier"/>
+								</div>
+								<!-- /Picture -->
+
+								<!-- Testimonial Text -->
+								<div class="testimonial-text">
+									<p>très bonne prestation .je recommande. demandez lui ce qui vous intéresse il va vous le réaliser.</p>
+								</div>
+								<!-- /Testimonial Text -->
+
+								<!-- Testimonial author information -->
+								<div class="testimonial-author-info">
+									<h5 class="testimonial-author">Pascal Stier</h5>
+									<p class="testimonial-firm">Dirigeant Entreprise STIER</p>
+								</div>
+								<!-- /Testimonial author information -->
+
+								<div class="testimonial-icon">
+									<i class="fa fa-quote-left"></i>
+								</div>
+
+								<div class="testimonial-icon-big">
+									<i class="fa fa-quote-right"></i>
+								</div>
+							</div>
+							<!-- /Testimonial Content -->
+						</div>
+						<!-- End of Testimonial 2 -->
+					</div>
+					<!-- /Testimonials -->
+
+					<div class="p-40"></div>
+
+					<div class="text-white bg-tertiary text-center pt-5 pb-5" id="agence">
+						<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
+						<p class="fw-bold mb-3 text-center lead text-white px-5 text-justify">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
+						<div class="ask">
+							<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
+								<span class="ml-2">
+									<span class="fas fa-arrow-right"></span>
+								</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 
