--- a/templates/front/maintenance/index.html.twig
+++ b/templates/front/maintenance/index.html.twig
@@ -15,8 +15,10 @@
                         <span>Des correctifs sont en cours de développement, merci de votre compréhension.</span><br>
 						<span>Bientôt les services seront rétablis, restez connecté(e)s.</span><br>
 						<br>
-						<h6 class="display-6">Dernières actualités</h6>
-						<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7186542183821234176" height="1612" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+						<h6 class="display-6">Dernières actualités <strong class="text-danger d-md-none d-lg-none">disponible sur ordinateur/tablette</strong></h6>
+						<div class="d-flex justify-content-center">
+							<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7186542183821234176" height="1612" width="504" frameborder="0" allowfullscreen="" title="Embedded post,scriptzenit script zenit" class="d-md-block d-lg-block d-none"></iframe>
+						</div>
 						<h6 class="display-6">Que voulez-vous faire ?</h6>
 						<div>
 							<div class="buttons_maintenance mt-5">
