--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 		<meta name="created" content="2023-08-24">
 		<meta name="image" content="https://scriptzenit.fr/img/logo.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<meta name="description" content="Découvrez les services de ScriptZenIT : spécialistes en création de sites internet et d'applications de qualité. De la conception ergonomique au développement technique, on vous accompagnent pour donner vie à vos idées en ligne."/>
+		<meta name="description" content="Découvrez les services de ScriptZenIT : spécialistes en création de sites internet et d'applications de qualité. De la conception ergonomique au développement technique, on vous accompagne pour donner vie à vos idées en ligne."/>
 		<meta name="keywords" content="création site web, développement web, conception site internet, design web, identité numérique, conseils site internet, agence web, applications web, sites responsives, UX/UI, développement d'applications, solutions digitales"/>
 		<meta content="Walid BELBECHE" name="author"/>
 		<title>
