--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -62,7 +62,7 @@
 			})
 		</script>
 
-		<!-- Commercial -->
+		{#<!-- Commercial -->
 			<div class="col-md-4 mb-4">
 				<div class="card">
 					<img src="{{ asset('img/youss_ousmane.jpg')}}" class="card-img-top rounded-circle" alt="Commercial - Youssouf Ousmane" width="200" height="200">
@@ -107,7 +107,7 @@
 				$('#myModal').on('shown.bs.modal', function () {
 					$('#myInput').trigger('focus')
 				})
-			</script>
+			</script>#}
 			<!-- Admin sytème -->
 			<div class="col-md-4 mb-4">
 				<div class="card">
