--- a/templates/front/subject/index.html.twig
+++ b/templates/front/subject/index.html.twig
@@ -4,6 +4,11 @@
 
 	<div class="jumbotron bg-primary">
 		<h3 class="lead text-white text-center">Centre Access</h3>
+
+		<div class="container text-center">
+			<hr>
+			<a href="{{ url('front_Subjects_new') }}" class="btn btn-secondary">Écrire au support</a>
+		</div>
 	</div>
 
 
