fixing prod cache

--- a/templates/back/includes/nav.html.twig
+++ b/templates/back/includes/nav.html.twig
@@ -30,6 +30,10 @@
 				</li>
 
 				<li class="menu-item">
+					<a href="">Voir L'équipe</a>
+				</li>
+
+				<li class="menu-item">
 					<a href="{{ url('back_user_index')}}">Voir utilisateur</a>
 				</li>
 				<li class="menu-item">
@@ -38,10 +42,6 @@
 
 				<li class="menu-item">
 					<a href="{{ url('back_home_support') }}">Voir l'admin support</a>
-				</li>
-
-				<li class="menu-item">
-					<a href="{{ url('back_Subjects_list') }}">Subject support</a>
 				</li>
 
 				<li class="menu-item">
