--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -73,7 +73,7 @@
 						<button class="w-100 btn btn-lg btn-primary" type="submit">
 							Me connecter
 						</button>
-						<hr class="my-4">
+						{#<hr class="my-4">
 						<div class="d-grid mb-2">
 							<button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
 							<i class="fab fa-google me-2"></i> Google
@@ -83,7 +83,7 @@
 							<button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
 							<i class="fab fa-facebook-f me-2"></i> Facebook
 							</button>
-						</div>
+						</div>#}
 					</form>
 				</div>
 			</div>
