--- a/templates/front/profil/edit.html.twig
+++ b/templates/front/profil/edit.html.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+    <script src="{{ asset('js/resource.js') }}"></script>
+
     <!-- Page Title
          ============================================= -->
     <section class="page-title bg-primary border-bottom-0">
