--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -109,7 +109,7 @@
 				})
 			</script>#}
 			<!-- Admin sytème -->
-			<div class="col-md-4 mb-4">
+			{#<div class="col-md-4 mb-4">
 				<div class="card">
 					<img src="{{ asset('img/youss.png')}}" class="card-img-top rounded-circle" alt="admin système - Youss_">
 					<div class="card-body">
@@ -152,7 +152,7 @@
 					$('#myInput').trigger('focus')
 				})
 			</script>
-		</div>
+		</div>#}
 	</div>
 
 	<div class="jumbotron jumbotron-fluid bg-primary">
