--- a/templates/front/profil/show.html.twig
+++ b/templates/front/profil/show.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Profil{% endblock %}
 
 {% block content %}
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="{{ asset('js/resource.js') }}"></script>
 
     <!-- Page Title
 		============================================= -->
