fixed page teams

--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -8,7 +8,7 @@
 	<div class="container-fluid text-center jumbotron">
 		<h1>L'équipe</h1>
 		<div class="page-subtitle">
-			<h4>Découvrez notre équipe, notre expertise, et ce que l'ont peut vous apporter</h4>
+			<h4>Découvrez notre équipe, notre expertise, et ce qu'on peut vous apporter</h4>
 			<a href="{{ url('front_contact')}}" target="_self" class="btn btn-primary btn-lg px-4 rounded-pill">Nous contacter</a>
 		</div>
 	</div>
