removed cookie conscent

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,7 @@
 				{% block navbar %}
 					{% include "front/includes/nav.html.twig" %}
 				{% endblock %}
-				<section class="container-fluid">
+				{#<section class="container-fluid">
 					<div id="cookie-consent" class="position-fixed bg-primary text-center" style="bottom:0;z-index: 99999;left: 0;right:0;">
 						<p class="text-white">
 							Nous utilisons des cookies pour améliorer votre expérience. En acceptant, vous consentez à l'utilisation de ces cookies à des fins non commerciales.
@@ -71,7 +71,7 @@
 							Vous avez refusé l'utilisation des cookies. Certains fonctionnalités peuvent ne pas fonctionner correctement.
 						</p>
 					</div>
-				</section>
+				</section>#}
 
 				{% block content %} {% endblock %}
 
