added cguv + cgu perso

--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -27,7 +27,13 @@
                 <li>
                     <a href="{{ url('front_conditions') }}">Conditions générales</a>
                 </li>
-                {#<li><a href="#Données personnelles">Données personnelles</a></li>#}
+
+                <li>
+                    <a href="{{ url('front_cguv') }}">Conditions générales de ventes</a>
+                </li>
+                <li>
+                    <a href="#Données personnelles" onclick="alert('En cours de rédaction')">Données personnelles RGPD</a>
+                </li>
             </ul>
         </div>
     </div>
