--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -29,7 +29,7 @@
                 </li>
 
                 <li>
-                    <a href="{{ url('front_cguv') }}">Conditions générales de ventes</a>
+                    <a href="{{ url('front_cguv') }}">Conditions générales de vente</a>
                 </li>
                 <li>
                     <a href="#Données personnelles" onclick="alert('En cours de rédaction')">Données personnelles RGPD</a>
