--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -25,14 +25,10 @@
                 </li>
 
                 <li>
-                    <a href="{{ url('front_conditions') }}">Conditions générales</a>
-                </li>
-
-                <li>
-                    <a href="{{ url('front_cguv') }}">Conditions générales de vente</a>
+                    <a href="{{ url('front_cguv') }}">Conditions générales de vente et d'utilisation</a>
                 </li>
                 <li>
-                    <a href="#Données personnelles" onclick="alert('En cours de rédaction')">Données personnelles RGPD</a>
+                    <a href="#Données personnelles" onclick="alert('En cours de rédaction')">Politiques de confidentialité</a>
                 </li>
             </ul>
         </div>
