--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -14,7 +14,7 @@
 	</div>
 
 	{# Section d'en-tête #}
-	<section id="slider" class="slider-element bg-home-image pt-5" style="color: var(--cnvs-bg-overlay-bg) !important;height: 100vh;">
+	<section id="slider" class="slider-element bg-home-image" style="color: var(--cnvs-bg-overlay-bg) !important;height: 100vh;">
 		<div class="container">
 			<div class="row align-items-md-end">
 				<div class="col-lg-5 align-self-center flex-column">
