--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,13 +1,13 @@
 <div>
-	<header id="header" style="margin-bottom: 4rem !important;">
-		<nav class="navbar navbar-expand-lg fixed-top container-fluid text-dark" style="background-color: #ffffff;">
+	<header id="header" style="margin-bottom: 5rem !important;margin-top: 1px;!important">
+		<nav class="navbar navbar-expand-lg fixed-top container-fluid text-dark mt-top-logo" style="background-color: #ffffff;">
 			<!-- Text Logo -->
 			<div class="logo">
 				<a href="{{ url('front_home') }}">
 					<img src="{{ asset('img/logo.png')}}" class="d-sm-none d-md-none d-lg-block" width="20%" height="30%" alt="Agence web à Avallon (89200)">
 				</a>
 				<a href="{{ url('front_home') }}">
-					<div class="logo-text d-md-block d-lg-none d-sm-block">ScriptZenIT</div>
+					<div class="logo-text d-md-block d-lg-none d-sm-block fw-bold" style="font-size: 3rem;">ScriptZenIT</div>
 				</a>
 			</div>
 			<!-- /Text Logo -->
