--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,13 +39,13 @@
 
 		{#<div class="lm-animated-bg"></div>#}
 
-		{#<!-- Loading animation -->
-		<div class="preloader">
+		<!-- Loading animation -->
+		{#<div class="preloader">
 			<div class="preloader-animation">
 				<div class="preloader-spinner"></div>
 			</div>
-		</div>
-		<!-- /Loading animation -->#}
+		</div>#}
+		<!-- /Loading animation -->
 
 		<!-- Scroll To Top Button -->
 		<div class="lmpixels-scroll-to-top">
