--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,6 +1,6 @@
 <div>
-	<header id="header" style="margin-bottom: 5rem !important;margin-top: 1px;!important">
-		<nav class="navbar navbar-expand-lg fixed-top container-fluid text-dark mt-top-logo" style="background-color: #ffffff;">
+	<header id="header" style="margin-bottom: 3rem !important;margin-top: 3px;!important">
+		<nav class="navbar navbar-expand-lg fixed-top container text-dark mt-top-logo" style="background-color: #ffffff;">
 			<!-- Text Logo -->
 			<div class="logo">
 				<a href="{{ url('front_home') }}">
@@ -30,7 +30,7 @@
 						<a class="nav-link" href="{{ url('front_project') }}">Nos réalisations</a>
 					</li>
 					<li class="menu-item {{ app.request.get('_route') == 'front_devis_new' ? 'active' : '' }}">
-							<a class="nav-link" href="{{ url('front_devis_new') }}">Faire une demande</a>
+						<a class="nav-link" href="{{ url('front_devis_new') }}">Faire une demande</a>
 					</li>
 					{% if not app.user %}
 						<li class="menu-item {{ app.request.get('_route') == 'app_register' ? 'active' : '' }}">
