changed banner home

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -13,11 +13,38 @@
 		{% endfor %}
 	</div>
 
-	<main>
+
+	<!-- Hero 4 - Bootstrap Brain Component -->
+	<section class="bg-primary">
+		<div class="container-fluid overflow-hidden">
+			<div class="row">
+				<div class="col-12 col-md-12 order-1 order-md-0 align-self-md-end">
+					<div class="row py-3 py-sm-5 py-xl-9 mt-md-5 justify-content-sm-center">
+						<div class="col-12 col-sm-10">
+							<h2 class="display-2 fw-bolder mb-4 text-white">Agence Web dans la Nièvre</h2>
+							<div class="row">
+								<div class="col-md-6 col-xxl-6">
+									<p class="fs-5 mb-5 text-white">En optant pour nos services sur notre plateforme, vous bénéficierez d'un ensemble d'outils de gestion de serveur pour superviser efficacement vos applications en temps réel. Vous aurez également la possibilité de télécharger votre demande dans un format PDF pour une consultation pratique.</p>
+								</div>
+								<div class="col-md-6 col-xxl-6">
+									<p class="fs-5 mb-5 text-white">Chez ScriptzenIT, notre expertise en développement web ne se limite pas à la conception d'un site professionnel et séduisant. Nous nous engageons à vous accompagner au-delà de cette première phase, afin de garantir l'excellence de votre projet. Découvrez nos réalisations pour vous inspirer davantage vers la concrétisation de vos ambitions.</p>
+								</div>
+								<div class="d-grid gap-2 d-sm-flex">
+									<a href="{{ url('front_devis_new') }}" class="btn btn-warning bsb-btn-2xl rounded-pill">Réaliser votre demande maintenant</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	{#<main>
 		<div class="px-4 pt-5 my-5 text-center border-bottom bg-home-image" style="height: 100vh;">
-			<h1 class="display-4 fw-bold text-body-emphasis text-white">Agence Web dans la Nièvre</h1>
+			<h1 class="display-4 fw-bold text-body-emphasis text-white"></h1>
 			<div class="col-lg-6 mx-auto">
-				<p class="text-white rounded">En optant pour nos services sur notre plateforme, vous bénéficierez d'un ensemble d'outils de gestion de serveur pour superviser efficacement vos applications en temps réel. Vous aurez également la possibilité de télécharger votre demande dans un format PDF pour une consultation pratique. Chez ScriptzenIT, notre expertise en développement web ne se limite pas à la conception d'un site professionnel et séduisant. Nous nous engageons à vous accompagner au-delà de cette première phase, afin de garantir l'excellence de votre projet. Découvrez nos réalisations pour vous inspirer davantage vers la concrétisation de vos ambitions.</p>
+				<p class="text-white rounded"></p>
 				<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
 					<a href="{{ url('front_project') }}" class="btn btn-darken btn-primary">
 						Voir nos réalisations<i class="bx bx-right-arrow-alt"></i>
@@ -30,7 +57,7 @@
 				</div>
 			</div>
 		</div>
-	</main>
+	</main>#}
 
 	{# Section d'en-tête #}
 	{#<section id="slider" class="slider-element bg-home-image" style="color: var(--bs-card-img-overlay-padding) !important;height: 100vh;">
