--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -7,7 +7,7 @@
     max-width: 100%;
     vertical-align: bottom;
     position: absolute;
-    top: 0;
+    margin-top: 2px;
     bottom: 0;
 }
 
@@ -241,7 +241,7 @@
 }
 
 .bg-home-image{
-    background-image: url('../../../img/bg2.jpg');
+    background-image: url('../../../img/home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
