--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,7 @@
 		<link rel="stylesheet" href="{{ asset('css/front/css/app.css')}}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/canvas_style.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/services.css') }}">
+		<link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/heroes/hero-4/assets/css/hero-4.css">
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
