--- a/templates/back/ticket/index.html.twig
+++ b/templates/back/ticket/index.html.twig
@@ -24,7 +24,11 @@
                         <td>{{ message.id }}</td>
                         <td>{{ message.sender }}</td>
                         <td>{{ message.devis.typeDeSiteWeb }}</td>
-                        <td>{{ message.devis.attentesDesignWeb }}</td>
+                        <td>
+                            {% for attentes in message.devis.attentesDesignWeb %}
+                                {{ attentes.label }}
+                            {% endfor %}
+                        </td>
                         <td>{{ message.content }}</td>
                         <td>{{ message.createdAt|date('Y-m-d H:i:s') }}</td>
                         <td>{{ message.status }}</td>
