test oauth github in prod

--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 
-	<img src="{{ asset('img/keep_it_simple.png') }}" alt="Création de demande en ligne ScriptZenIT, solution digital sur mesure" class="thumbnail">
+	<img src="{{ asset('img/debut.png') }}" alt="Création de demande en ligne ScriptZenIT, solution digital sur mesure" class="thumbnail">
 	<div class="b-example-divider"></div>
 	<section class="container text-center">
 		<p class="lead mb-5">
