--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -85,6 +85,11 @@
 							</button>
 						</div>#}
 					</form>
+					<h1>Connectez-vous avec GitHub</h1>
+						<a href="{{ path('github_oauth') }}">
+							<button>Connectez avec GitHub</button>
+						</a>
+					<hr>
 				</div>
 			</div>
 		</div>
