wip: adding github connect to plateforme

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -85,10 +85,12 @@
 							</button>
 						</div>#}
 					</form>
-					<h1>Connectez-vous avec GitHub</h1>
-						<a href="{{ path('github_oauth') }}">
-							<button>Connectez avec GitHub</button>
+					<p>
+						<h1>Connectez-vous avec GitHub</h1>
+						<a href="{{ path('github_connect') }}">
+							<button>Se connecter avec github</button>
 						</a>
+					</p>
 					<hr>
 				</div>
 			</div>
