--- a/templates/back/includes/nav.html.twig
+++ b/templates/back/includes/nav.html.twig
@@ -6,9 +6,8 @@
 		<!-- Text Logo -->
 		<div class="text-logo">
 			<a href="{{ url('back_index') }}">
-				<div class="logo-symbol">WB</div>
-				<div class="logo-text">Walid
-					<span>BELBECHE</span>
+				<div class="logo-text">ScriptZenIT
+					<span>{{ app.user.username }}</span>
 				</div>
 			</a>
 		</div>
@@ -30,7 +29,7 @@
 				</li>
 
 				<li class="menu-item">
-					<a href="">Voir L'équipe</a>
+					<a href="{{ url('back_member_index') }}">Voir L'équipe</a>
 				</li>
 
 				<li class="menu-item">
